Small design fixes (#209)
* Fix overflow / remove horizontal scrollbar


* Add shadow to blog title card


* Move blog post title to header


* Fix card title vertical centering


* Add missing full stops


* Remove invalid markdown references


* correct footnote


* Revert "Add missing full stops"

This reverts commit 19cc903ffbb4ded3fd94a5ac16b5bfebf6c72f01.


---------

--- a/_sass/kroxylicious.scss
+++ b/_sass/kroxylicious.scss
@@ -344,3 +344,13 @@ b.conum * {
   border: none;
   opacity: 0;
 }
+
+.default-layout > .container-fluid.px-0 > .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.card-title {
+  margin-top: calc(var(--#{$prefix}card-title-spacer-y) / 2);
+  margin-bottom: calc(var(--#{$prefix}card-title-spacer-y) / 2);
+}
